# model_control

./: .env  .gitignore  Dockerfile  MAVLINK_TEST_README.md  MONGODB_CONFIG_GUIDE.md  MULTI_GPU_GUIDE.md  MYSQL_MULTI_DATASOURCE_README.md  MYSQL_QUICKSTART.md  README.md  REALTIME_AI_README.md  UDP_FIX_README.md  UDP_PARSER_FIX_SUMMARY.md  VEHICLE_AI_GUIDE.md  debug_gps.py  debug_test.py  docker-compose.yml  env.example  env_config_example.md  gps_simulator.py  mavlink_test_client.py  multi_device_gps_simulator.py  pyproject.toml  requirements.txt  setup_env.py  simple_test.py  start.py  start_server.py  test_app.py  test_complete_system.py  test_final_mqtt_format.py  test_gps_complete.py  test_gps_only.py  test_gps_parser.py  test_logging.py  test_mavlink_integration.py  test_mavlink_receiver.py  test_mqtt_forwarding.py  test_mqtt_gps.py  test_mqtt_mavlink.py  test_multi_device.py  (+10 more)
docs/: LOGGING_GUIDE.md  vLLM_MCP_INTEGRATION.md
examples/: llm_example.py  logging_example.py  mysql_usage_example.py
scripts/: init_mysql_databases.py  test_mongodb_connection.py  test_mysql_integration.py
src/app/: __init__.py  config.py  main.py
src/app/ai_backends/: device_control.py  openai_client.py
src/app/api/: __init__.py  ai.py  crud.py  datasource.py  deps.py  llm.py  mavlink.py  mqtt.py  mysql_datasource.py  realtime_ai.py  simple_mavlink.py  simple_test.py  upload.py  vehicle_ai.py
src/app/core/: constants.py  exceptions.py  logging.py
src/app/db/: mongo.py  mongo_multi.py  mysql.py  mysql_multi.py
src/app/llm/: vllm_client.py
src/app/mavlink/: advanced_parser.py  mavlink_parser.py  mavlink_receiver.py  mavlink_task.py  simple_parser.py  udp_receiver.py
src/app/mcp/: protocol.py
src/app/models/: mavlink_models.py  mongo_models.py  mysql_models.py  schemas.py  simple_models.py
src/app/realtime_ai/: __init__.py  registry.py  service.py
src/app/realtime_ai/core/: __init__.py  base.py  exceptions.py  factory.py
src/app/realtime_ai/detectors/: __init__.py  (+4 more)
src/app/services/: __init__.py  ai_service.py  crud_service.py  device_manager.py  mavlink_service.py  mqtt_service.py  socketio_service.py
src/app/socketio_app/: server.py
src/app/static/: test.html
src/app/utils/: file_utils.py
tests/: load_model.py  test_ai_service.py  test_vllm_integration.py
(+8 files in other folders)
