[build-system]
# 指定使用 setuptools + wheel 来打包
requires = [
  "setuptools>=61.0",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "model-control-ai"
version = "0.2.0"
description = "FastAPI-based model control system with YOLOv11 AI recognition"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
requires-python = ">=3.11"

[project.dependencies]
# Web框架
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-multipart = "^0.0.6"

# 数据库
SQLAlchemy = "^2.0"
pymongo = "^4.5"
beanite = "^1.24"
redis = "^5.0"

# 配置和环境
python-dotenv = "^1.0"
pydantic-settings = "^2.0"

# AI/ML相关
torch = "^2.1.0"
torchvision = "^0.16.0"
ultralytics = "^8.0.0"
opencv-python = "^4.8.0"
pillow = "^10.0.0"
numpy = "^1.24.0"

# 工具库
shapely = "^2.0"
aiofiles = "^23.2.0"
python-socketio = "^5.9.0"

# 日志和监控
loguru = "^0.7.0"

[tool.setuptools]
# 告诉 setuptools：源代码在 src 目录下
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["app*"]   # 只把 app 包（及其子包）安装进来

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
